--- a/views/home/index.html
+++ b/views/home/index.html
@@ -53,7 +53,7 @@
 </div>
 
 <!--加载更多按钮-->
-<button type="button" id="load-more" class="btn btn-warning btn-block waves-effect waves-light mb-3">加载更多</button>
+<button type="button" id="load-more" class="btn btn-unique btn-block waves-effect waves-light mb-3">加载更多</button>
 
 <script>
         /*初始化*/
