添加相关推荐系统

--- a/views/article/view.html
+++ b/views/article/view.html
@@ -33,8 +33,7 @@
 
     <!--str2html 显示输出html代码-->
     <article id="content">{{str2html .Article.Body}}</article>
-
-
+    {{template "article/_links.html" .}}
 </div>
 <script>
     //aritcle 图片样式修改 w-100
