--- a/views/layout/_script.html
+++ b/views/layout/_script.html
@@ -11,3 +11,4 @@
 <!-- MDB core JavaScript -->
 <script src="//cdn.bootcss.com/mdbootstrap/4.3.2/js/mdb.min.js"></script>
 <script src="//cdn.bootcss.com/jquery.qrcode/1.0/jquery.qrcode.min.js"></script>
+<script src="/static/js/my.js"></script>
