删除垃圾信息修复登陆功能注册

--- a/views/auth/register.html
+++ b/views/auth/register.html
@@ -44,7 +44,13 @@
               </fieldset>
               <!-- /.col -->
               <div class="md-form form-group mb-2">
-                <a id="submit" class="btn btn-primary btn-lg waves-effect waves-light btn-block">注册</a>
+                <div class="col-xs-6">
+                    <a id="submit" class="btn btn-warning btn-lg waves-effect waves-light btn-block">注册</a>
+                </div>
+                <div class="col-xs-6">
+                    <a href="/" class="btn btn-unique  btn-lg waves-effect waves-light btn-block">返回首页</a>
+                </div>
+
               </div>
             </form>
 
