--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -54,10 +54,15 @@
         <li class="nav-item ">
           <a data-toggle="modal" data-target="#modal-login" class="nav-link waves-effect waves-light ml-4">
                 <i class="fa fa-sign-in"></i>
-                <span class="hidden-sm-down">登陆</span>
+                <span class="hidden-md-down">登陆</span>
               </a>
         </li>
-
+        <li class="nav-item ">
+          <a href="/auth/register" class="nav-link waves-effect waves-light ml-4">
+                <i class="fa fa-registered"></i>
+                <span class="hidden-md-down">注册</span>
+          </a>
+        </li>
         {{end}}
       </ul>
     </div>
