--- a/views/tag/view.html
+++ b/views/tag/view.html
@@ -10,7 +10,7 @@
 
                                         <div class="series-card-details d-flex align-items-center">
                                                 <span class="badge badge-danger  tag-name-link mt-1 "> {{$.Tag.Name}}</span>
-                                                <span class="badge badge-primary tag-week-day mt-1 mr-3">{{$value.CreatedWeekday}}</span>
+                                                <span class="badge badge-primary tag-week-day mt-1 mr-3 time human-date" data-time="{{$value.CreatedAt}}">{{$value.CreatedAt}}</span>
                                                 <h4 class="text-center w-100">{{$value.Title}}</h4>
                                         </div>
                                 </div>
@@ -24,7 +24,7 @@
 
                                 <ul class="list-inline d-flex justify-content-between mb-0">
                                         <li class="list-inline-item">
-                                                <strong><span class="fa fa-calendar" title="发布日期"></strong> <span class="text-danger date">{{$value.CreatedDate}}</span>
+                                                <span class="time month-date text-danger" data-time="{{$value.CreatedAt}}">{{$value.CreatedAt}}</span>
                                         </li>
 
                                         <li class="list-inline-item">
@@ -68,13 +68,13 @@
                 cloneNode.find('a:first-child').attr('href', href).attr('title', title);
                 cloneNode.find('img').attr('src', imgSrc).attr('title', title);
                 cloneNode.find('span.tag-name-link').text(articleItem.FirstTagName);
-                cloneNode.find('span.tag-week-day').text(articleItem.CreatedWeekday);
                 cloneNode.find('h4').text(title);
                 cloneNode.find('p').text(articleItem.Excerpt);
                 cloneNode.find('span.read').text(articleItem.Vote.Visit);
                 cloneNode.find('span.favorate').text(articleItem.Vote.FavorateCount);
-                cloneNode.find('span.date').text(articleItem.CreatedDate);
                 cloneNode.find('span.score').text(articleItem.Vote.Score);
+                cloneNode.find('span.time.human-date').text(changeTimeTagToHumanTime(articleItem.CreatedAt));
+                cloneNode.find('span.time.month-date').text(changeTimeTagToMonthDate(articleItem.CreatedAt));
                 $('body > div.container.pt-1 > div.row.no-gutters').append(cloneNode);
         }
         function getData() {
