--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -23,17 +23,12 @@
           <a class="nav-link " href="/tag/8">名言锦句</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link " data-toggle="modal" data-target="#allTags"><span class="ion-android-apps"></span></a>
-        </li>
-        <li class="nav-item btn-group">
-          <a class="nav-link dropdown-toggle" id="all-tags" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">更多</a>
-          <div class="dropdown-menu" aria-labelledby="all-tags">
-            <a class="dropdown-item">视频博客</a>
-            <a class="dropdown-item">动图市集</a>
-            <a class="dropdown-item">创意玩意</a>
-            <a class="dropdown-item">全部分类</a>
-
-          </div>
+          <a class="nav-link " data-toggle="modal" data-target="#allTags">
+            <span class="ion-android-apps"></span>
+            <span class="ion-android-apps"></span>
+            <span class="ion-android-apps"></span>
+            <span class="ion-android-apps"></span>
+          </a>
         </li>
       </ul>
       <form class="form-inline waves-effect waves-light">
