--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{.Title}}</title>
-    <meta name="keywords" content="TRY美剧|trytv|看美剧学电影|轻松学习英语|{{.Keyword}}">
-    <meta name="description" content="{{.Description}}">
+    <meta name="keywords" content="mojoTV|看美剧学电影|轻松学习英语|{{.Keyword}}">
+    <meta name="description" content="mojotv.cn提供最新的欧美资讯,美剧娱乐信息{{.Description}}">
     <meta name="_xsrf" content="{{.Xsrf}}" />
     <link href="//cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -23,6 +22,5 @@
                 'Referer':'http://c-h5.youku.com/'
             }
         });
-
     </script>
 </head>
