--- a/views/tag/view.html
+++ b/views/tag/view.html
@@ -24,6 +24,7 @@
 
                                 <ul class="list-inline d-flex justify-content-between mb-0">
                                         <li class="list-inline-item">
+                                                <strong class="fa fa-calendar" title="发布日期"></strong> 
                                                 <span class="time month-date text-danger" data-time="{{$value.CreatedAt}}">{{$value.CreatedAt}}</span>
                                         </li>
 
