--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{.Title}}</title>
-    <meta name="keywords" content="mojoTV|看美剧学电影|轻松学习英语|{{.Keyword}}">
-    <meta name="description" content="mojotv.cn提供最新的欧美资讯,美剧娱乐信息{{.Description}}">
+    <meta name="keywords" content="{{.Keyword}}|mojoTV|最新欧美娱乐资讯">
+    <meta name="description" content="{{.Description}}|mojotv.cn提供最新的欧美娱乐资讯">
     <meta name="_xsrf" content="{{.Xsrf}}" />
     <link href="//cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -21,5 +21,12 @@
                 'X-Xsrftoken': $('meta[name=_xsrf]').attr('content'),
             }
         });
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-77530922-2', 'auto');
+        ga('send', 'pageview');
     </script>
 </head>
