--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -8,6 +8,9 @@
     <div class="collapse navbar-collapse" id="navbarNav1">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
+          <a class="nav-link" href="/tag/2">文章精选</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/">最新资讯</a>
         </li>
         <li class="nav-item">
