--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -23,14 +23,8 @@
           <a class="nav-link " href="/subtitle">字幕分享</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link " href="/tag/8">名言锦句</a>
-        </li>
-        <li class="nav-item ">
           <a class="nav-link " data-toggle="modal" data-target="#allTags">
-            <span class="ion-android-apps"></span>
-            <span class="ion-android-apps"></span>
-            <span class="ion-android-apps"></span>
-            <span class="ion-android-apps"></span>
+            全部分类
           </a>
         </li>
       </ul>
