--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -14,7 +14,7 @@
           <a class="nav-link" href="/">最新资讯</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/tag/2">搞笑图文</a>
+          <a class="nav-link" href="/tag/10">醒脑图文</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/tag/3">趣味视频</a>
