--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -63,7 +63,7 @@
     <!--Copyright-->
     <div class="footer-copyright">
         <div class="container-fluid">
-            © 2017 Copyright: <a href="http://www.trytv.org"> trytv.org </a>
+            © 2017 Copyright: <a href="http://www.mojotv.org"> mojoTV </a>
         </div>
     </div>
     <!--/.Copyright-->
