--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -13,7 +13,7 @@
     <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/mdbootstrap/4.3.2/css/mdb.min.css" rel="stylesheet">
     <link href="/static/css/my.css" rel="stylesheet">
-
+    <meta name="baidu_union_verify" content="adf98c4d84f4bb51844ae8108b25c0a0">
     <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script>
         $.ajaxSetup({
