--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -4,7 +4,10 @@
       aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-    <a class="navbar-brand" href="/"><img src="/static/img/logo56x56.png"  width="35" height="35" alt="trytv.org logo"></a>
+    <a class="navbar-brand" href="/">
+      <img src="/static/img/icon/mojo-35-long.png"   height="35" alt="mojotv.cn logo" class="hidden-sm-down">
+      <span class="text-logo font-weight-bold hidden-sm-up">mojoTV</span>
+    </a>
     <div class="collapse navbar-collapse" id="navbarNav1">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
