--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -14,13 +14,13 @@
           <a class="nav-link" href="/tag/2">文章精选</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/tag/3">视频博客</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/">最新资讯</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/tag/10">醒脑图文</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/tag/3">趣味视频</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link " href="/subtitle">字幕分享</a>
