--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="text-center">
                     <h5 class="title">今日头条</h5>
-                    <div class="qr-media" data-text="https://www.toutiao.com/c/user/58364068651/#mid=1562467406640130"></div>
+                    <div class="qr-media" data-text="//www.toutiao.com/m1562467406640130"></div>
                 </div>
                 <div class="text-center">
                     <h5 class="title">腾讯视频</h5>
