微博 share app key

--- a/views/layout/_share_comment.html
+++ b/views/layout/_share_comment.html
@@ -15,7 +15,15 @@
 
     <!-- JiaThis Button BEGIN -->
     <script type="text/javascript">
-        var jiathis_config = { data_track_clickback: 'true' };
+        var jiathis_config = {
+            data_track_clickback: 'true',
+            appkey: {
+                "tsina": "2646862509",
+                //"tqq": "您网站的腾讯微博appkey",
+                //"t163": "您网站的网易微博appkey"
+            }
+
+        };
     </script>
     <script type="text/javascript" src="//v3.jiathis.com/code_mini/jia.js?uid=2088157" charset="utf-8"></script>
     <!-- JiaThis Button END -->
@@ -24,8 +32,8 @@
     <div id="SOHUCS"></div>
     <script type="text/javascript">
         (function () {
-            var appid = 'cyt6PIKpu'; 
-            var conf = 'prod_b44d6b40706f3ee266884dcecded1a38'; 
+            var appid = 'cyt6PIKpu';
+            var conf = 'prod_b44d6b40706f3ee266884dcecded1a38';
             var width = window.innerWidth || document.documentElement.clientWidth;
             if (width < 960) {
                 window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="https://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>');
