--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -92,6 +92,8 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
         <button type="button" id='submit' class="btn btn-primary">登陆</button>
+        <button onclick="javascript:window.location = {{.WeiboAuth2Url}}" type="button" class="btn btn-primary"><span class="fa fa-weibo"></span></button>
+
       </div>
     </div>
   </div>
