--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,9 +13,7 @@
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/mdbootstrap/4.3.2/css/mdb.min.css" rel="stylesheet">
-    <meta property="wb:webmaster" content="da7999b4ae4dcf62" />
     <link href="/static/css/my.css" rel="stylesheet">
-    <meta name="baidu_union_verify" content="adf98c4d84f4bb51844ae8108b25c0a0">
     <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script>
         $.ajaxSetup({
@@ -22,10 +21,12 @@
                 'X-Xsrftoken': $('meta[name=_xsrf]').attr('content'),
             }
         });
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-77530922-2', 'auto');
         ga('send', 'pageview');
