--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -48,7 +48,7 @@
               <a href="//www.trytv.org/article/create" target="_blank" class="dropdown-item waves-effect waves-light">发表文章</a>
               <a href="//www.trytv.org/article" target="_blank" class="dropdown-item waves-effect waves-light">文章列表</a>
             {{end}}
-              <a class="dropdown-item waves-effect waves-light">{{.User.Email}}</a>
+              <a class="dropdown-item waves-effect waves-light">{{.User.Name}}</a>
               <a class="dropdown-item waves-effect waves-light" href="/auth/logout">注销</a>
           </div>
         </li>
@@ -56,7 +56,7 @@
         <li class="nav-item ">
           <a data-toggle="modal" data-target="#modal-login" class="nav-link waves-effect waves-light ml-4">
                 <i class="fa fa-sign-in"></i>
-                <span class="hidden-md-down">登陆</span>
+                <span class="hidden-md-down">登陆</span>Name
               </a>
         </li>
         <li class="nav-item ">
