--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -56,7 +56,7 @@
         <li class="nav-item ">
           <a data-toggle="modal" data-target="#modal-login" class="nav-link waves-effect waves-light ml-4">
                 <i class="fa fa-sign-in"></i>
-                <span class="hidden-md-down">登陆</span>Name
+                <span class="hidden-md-down">登陆</span>
               </a>
         </li>
         <li class="nav-item ">
