--- a/views/layout/_head.html
+++ b/views/layout/_head.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,13 +21,17 @@
             }
         });
         (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-77530922-2', 'auto');
         ga('send', 'pageview');
+
     </script>
+    <link rel="apple-touch-icon" sizes="180x180" href="//wwww.trytv.org/180x180.png">
+    <link rel="icon" type="image/png" href="//wwww.trytv.org/32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="//wwww.trytv.org/16.png" sizes="16x16">
 </head>
