--- a/views/layout/_share_comment.html
+++ b/views/layout/_share_comment.html
@@ -6,7 +6,7 @@
             <a class="jiathis_button_qzone"></a>
             <a class="jiathis_button_weixin"></a>
             <a class="jiathis_button_cqq"></a>
-            <a href="//www.jiathis.com/share?uid=2088157" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
+            <a href="http://www.jiathis.com/share?uid=2088157" class="jiathis jiathis_txt jtico jtico_jiathis" target="_blank"></a>
             <a class="jiathis_counter_style"></a>
         </div>
         <div id='rate-info'></div>
@@ -25,7 +25,7 @@
 
         };
     </script>
-    <script type="text/javascript" src="//v3.jiathis.com/code_mini/jia.js?uid=2088157" charset="utf-8"></script>
+    <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js?uid=2088157" charset="utf-8"></script>
     <!-- JiaThis Button END -->
 
     <!--PC和WAP自适应版 评论-->
