--- a/views/home/toutiaoAd.html
+++ b/views/home/toutiaoAd.html
@@ -3,15 +3,10 @@
 
 <h2 class="text-center text-success">"No" says one of the nurses. "We're just taking a short cut through the children's ward".</h2>
 
+<p>
+        除了一些常见观点，比如学英语，了解美国文化等，是看美剧的好处外。我觉得还有一个可以从美剧中的到大致的了解，可能会对移民的人有一定帮助：西方职场。在国外工作学习后，回过头看了一些美剧，这些美剧和自己的工作经历有一定相似之处，我反而从这些美剧中学到了如何适应国外的工作环境。我有这个想法主要是通过两部美剧《24小时》和《星际之门》，这两部美剧真的很能说明西方之职场的特点：1. 你的同事经常换《24小时》不用说了，男主角的同事，一天内不知道要换多少了。《星际之门》也是，虽然4小强基本不变，但是有些时候，还是会换组合的。在西方职场，换同事很正常的事情，基本上几年下来，只要你不走，周围的人都已经不是你原来进来是的人了。你可能是这个公司工作时间最久的人了。然而，西方职场另外的特点是不熬资历，新同事的等级职位都比你高也是很正常的，能力强的人，来了一两个礼拜，了解了业务，基本上都能上手了，而且可以高水准地处理他的工作。西方国家的员工，职业生涯/路径基本上自己掌控，别的公司是什么等级，新的公司里面一般都会是相应等级，甚至更高。不会因为换了工作，等级下降的。所以你的同事经常换，但是你该干啥干啥，学好如何与新来的人良好沟通是职业技能之一。2.你的上级以经常换《24小时》里面，经常换的就是CTU的领导了，但是男主角Jack不管换成谁，都有自己一套对应方式你的直接上级会经常换，有优秀的，也有不优秀的。学会如何和直接领导相处，保持融洽是非常重要的3. 领导层经常换非直接领导你的领导层经常换，这样政策会经常发生变化。 《星际之门亚特兰提斯》的第4部和第5部开头，都换了领导，然后政策就一下子全换了，主角们在适应新的政策过程中会发生一些矛盾，但后来也很快适应新政策，和领导关系相处融洽了西方职场换领导，就等于换政策，一年换一次甚至几次也是正常的，关键是你要学会适应变化，适应新的政策。可以马上把新政策融入到工作中，也是必备能力之一。4. 立刻把你从你的岗位上调走不管你有多忙，有多少任务在身，马上把你调走或通知你立刻辞职，这也是有很大可能的。而且你也不要惊讶新来的代替者很快就能胜任你的岗位。（而且能不能适应已经和你无关了）《24小时》第4季里，在面对危机的时候，把女领导换下，然后换上比尔，整个机构运作的更好了，而比尔也被称为《24小时》最称职的CTU领导人《星际之门亚特兰提斯》第5季度开始，卡特就被意外的换下，然而领导层也平稳过渡给了新的领导人。这两个部分还真的非常符合我经历的领导层更换。而你也是，你要有随时随地被更换的觉悟，可以立马打包走人的觉悟。你可能认为交接会很麻烦，但是在公司的眼里，人员交接可能是最容易的事情了。5. 相信你的同事，领导的能力无论是新员工还是老员工，无论是年轻的还是年长的，无论是那个国家的员工，既然公司聘用他们了，那么他们的能力你还是可以信任的。千万不要有一代不如一代的想法，新来的人不行，同事都是SB的想法《24小时》里面，无论里里面的角色是不是新人，出现场景是不是很短，是不是男主角熟悉的，只要是男主角Jack 的同事，Jack基本上是无条件信任对方的能力，然后给出指示。虽然Jack经常违抗命令，但是他对领导人的能力还是非常相信的，能合作一定会合作《星际之门》除了主要人物之外，一些配角，虽然出场相对较少，但是主角们还是非常信任他们的，比如医生，科学武器/技术研究人员，联络员等等角色，甚至是一些跑龙套的炮灰。团队合作很重要，同事既然能成为你的同事，一定有他们优秀的地方，你应该相信他们，更应该像他们学习。千万不要小看这一点，这个可以减轻自己大量的工作。6.其他另外还有很多特点，我就不一一举例了，有兴趣大家自己去感悟感悟如何与来自不同国家和背景的人共事如何与不同个性人的共事如何与领导有效沟通，如何与同事有效沟通遇到问题，应该以怎么样的态度和方法去解决问题遇到两难抉择，如何面对决策如何进行交涉，说服，讯问，沟通等交流技巧等等等等知识，都可以从这两部片子中学到.西方职场特点，可以多看看这两部美剧，自己去体会一下。
 
-<h2 class="text-center text-info">This is a joke I've told before in the comment section that is appropriate for this post. A priest, a rabbi, and a lawyer are riding in a small private plane with a group of kids. Suddenly the plane has problems and is about to crash nose first. The pilot informs the three adults that the only way to prevent the plane from crashing is to start tossing out kids. The rabbi says," we can't do that, these are children," the lawyer says, "fuck them", and the priest says " do you think we have enough time "?
-</h2>
-
-<h2 class="text-center text-warning">Please explain for those of us who are slow.</h2>
-
-<h2 class="text-center text-danger">This made me smile. Then it made me sad.</h2>
-
-<h2 class="text-center text-default">With some rewording, this joke could totally be wholesome.</h2>
+</p>
 
 
 </article>
