狗日的头条

--- a/views/home/toutiaoAd.html
+++ b/views/home/toutiaoAd.html
@@ -1,12 +1,40 @@
 <article>
 
 
-<h2 class="text-center text-success">"No" says one of the nurses. "We're just taking a short cut through the children's ward".</h2>
+<h2 class="text-center text-success"><strong>问：你有什么相见恨晚的英语学习方法？</strong></h2>
 
-<p>
-        除了一些常见观点，比如学英语，了解美国文化等，是看美剧的好处外。我觉得还有一个可以从美剧中的到大致的了解，可能会对移民的人有一定帮助：西方职场。在国外工作学习后，回过头看了一些美剧，这些美剧和自己的工作经历有一定相似之处，我反而从这些美剧中学到了如何适应国外的工作环境。我有这个想法主要是通过两部美剧《24小时》和《星际之门》，这两部美剧真的很能说明西方之职场的特点：1. 你的同事经常换《24小时》不用说了，男主角的同事，一天内不知道要换多少了。《星际之门》也是，虽然4小强基本不变，但是有些时候，还是会换组合的。在西方职场，换同事很正常的事情，基本上几年下来，只要你不走，周围的人都已经不是你原来进来是的人了。你可能是这个公司工作时间最久的人了。然而，西方职场另外的特点是不熬资历，新同事的等级职位都比你高也是很正常的，能力强的人，来了一两个礼拜，了解了业务，基本上都能上手了，而且可以高水准地处理他的工作。西方国家的员工，职业生涯/路径基本上自己掌控，别的公司是什么等级，新的公司里面一般都会是相应等级，甚至更高。不会因为换了工作，等级下降的。所以你的同事经常换，但是你该干啥干啥，学好如何与新来的人良好沟通是职业技能之一。2.你的上级以经常换《24小时》里面，经常换的就是CTU的领导了，但是男主角Jack不管换成谁，都有自己一套对应方式你的直接上级会经常换，有优秀的，也有不优秀的。学会如何和直接领导相处，保持融洽是非常重要的3. 领导层经常换非直接领导你的领导层经常换，这样政策会经常发生变化。 《星际之门亚特兰提斯》的第4部和第5部开头，都换了领导，然后政策就一下子全换了，主角们在适应新的政策过程中会发生一些矛盾，但后来也很快适应新政策，和领导关系相处融洽了西方职场换领导，就等于换政策，一年换一次甚至几次也是正常的，关键是你要学会适应变化，适应新的政策。可以马上把新政策融入到工作中，也是必备能力之一。4. 立刻把你从你的岗位上调走不管你有多忙，有多少任务在身，马上把你调走或通知你立刻辞职，这也是有很大可能的。而且你也不要惊讶新来的代替者很快就能胜任你的岗位。（而且能不能适应已经和你无关了）《24小时》第4季里，在面对危机的时候，把女领导换下，然后换上比尔，整个机构运作的更好了，而比尔也被称为《24小时》最称职的CTU领导人《星际之门亚特兰提斯》第5季度开始，卡特就被意外的换下，然而领导层也平稳过渡给了新的领导人。这两个部分还真的非常符合我经历的领导层更换。而你也是，你要有随时随地被更换的觉悟，可以立马打包走人的觉悟。你可能认为交接会很麻烦，但是在公司的眼里，人员交接可能是最容易的事情了。5. 相信你的同事，领导的能力无论是新员工还是老员工，无论是年轻的还是年长的，无论是那个国家的员工，既然公司聘用他们了，那么他们的能力你还是可以信任的。千万不要有一代不如一代的想法，新来的人不行，同事都是SB的想法《24小时》里面，无论里里面的角色是不是新人，出现场景是不是很短，是不是男主角熟悉的，只要是男主角Jack 的同事，Jack基本上是无条件信任对方的能力，然后给出指示。虽然Jack经常违抗命令，但是他对领导人的能力还是非常相信的，能合作一定会合作《星际之门》除了主要人物之外，一些配角，虽然出场相对较少，但是主角们还是非常信任他们的，比如医生，科学武器/技术研究人员，联络员等等角色，甚至是一些跑龙套的炮灰。团队合作很重要，同事既然能成为你的同事，一定有他们优秀的地方，你应该相信他们，更应该像他们学习。千万不要小看这一点，这个可以减轻自己大量的工作。6.其他另外还有很多特点，我就不一一举例了，有兴趣大家自己去感悟感悟如何与来自不同国家和背景的人共事如何与不同个性人的共事如何与领导有效沟通，如何与同事有效沟通遇到问题，应该以怎么样的态度和方法去解决问题遇到两难抉择，如何面对决策如何进行交涉，说服，讯问，沟通等交流技巧等等等等知识，都可以从这两部片子中学到.西方职场特点，可以多看看这两部美剧，自己去体会一下。
 
-</p>
+<p>我这个应当够晚，晚了十几年。</p>
+<p>对于一个把学习方法看的比学习更重要的人来说，英语是我学的最失败的学科。虽然考试成绩还可以，但直到大学毕业，也没找到一个合适的方法。在国外找工作的时候，本来担心的是口语，可是话唠到哪里都是话唠，英语说起来也没什么，不会的词我就绕开，顶多啰嗦点罢了，工作没有问题。但是阅读不行，一段话有几个词不懂，就看不下去了，图书馆里那么多小说，我都没法看，词汇量不够，这是硬伤。</p>
+<p>曾相信过词汇不重要，阅读技巧重要的观点，但问题是，读不懂就是读不懂，一个词不认识，看十遍还是不认识。所以曾尝试了各种不同的方法背单词：</p>
+<p>单词书，精背，A-Z，背到B，放弃。</p>
+<p>单词书，精背，Z-A，背到 T，放弃。</p>
+<p>单词书，浏览，看了3遍，一个词没记住，放弃。</p>
+<p>单词书，音义联想，想出了一堆乱七八糟的的东西，每次想到的还不一样，放弃。</p>
+<p>单词书，词根法，那么多词根，每个还有变形，一个词根只能对应几个词，效果不大，放弃。</p>
+<p>单词书，词源法，希腊来的，法语来的，拉丁语来的... 开玩笑，这么多，放弃。</p>
+<p>总结法，形近词，音近词，同义词，反义词，记住了几个，然后都混了，放弃。</p>
+<p>文曲星法，试过里边的猜单词的学法，但失败几次就去打俄罗斯方块了，放弃。</p>
+<p>阅读法，读书，不会的就查字典，二十分钟看一页，下次再看，之前查过的词都没印象了，放弃。</p>
+<p>阅读法2，写一个软件，提取出电子版中所有我不认识的单词，先背完生词，再读书。提取出来一看，一两千生词，这么多，放弃。</p>
+<p>软件法，我爱背单词的单机版，当时这个软件有了复习的概念，但还没有学习计划，背了几千个词，虽然没记住，但混了个脸熟，再遇到，想不起来也不觉得面生了。</p>
+<p>软件法2，囧记单词，图片助记，很轻松，但没图我就想不起来，放弃。</p>
+<p>软件法3，做选择题，看词选释义，我太擅长做选择题了，不认识也能猜出来，只看词还是不会。</p>
+<p>至此，我已经知道我要的是什么了，我要一个软件，输入要背的词，自动安排每天我要背什么，复习什么，不要有选择题，只是词，让我选择认识还是不认识，软件决定如何复习。</p>
+<p>我就决定自己写一个，在写之前我打算先看看同类软件都是怎么做的。诧异的发现，扇贝已经做到了，做到了我想要的80%左右的功能，在复习算法上有一些缺憾，我不喜欢打卡，不喜欢每天固定单词量，也不喜欢什么学习小组，不喜欢必须要登录才能用。但它可以通过不同的终端学习，手机，PC之间可以同步，有较标准的发音，这是我自己写软件做不到的地方。</p>
+
+<p>词汇量超过8k的时候，可以体会到词根的作用，超过15k的时候就可以大概分出它的词源，到20k就已经可以较流畅的阅读小说，并通过阅读增加词汇。</p>
+<p>所以，不是方法没用，而是词汇量不够。不过我还是觉得联想法意义不大。</p>
+<p>以下是经历各种挫折后总结出的经验，</p>
+<p>1，单词发音很重要。即使你不读，你也要听。与中文不同，英文的发音是与拼写联系在一起的，知道怎么读，就知道怎么写了。</p>
+<p>2，老老实实的背基础词汇。对于前6k个基础词汇，各种方法帮助不大。等到词汇量多了，自然而然的你就可以应用词根词源，同义反义了。不要浪费时间研究方法。</p>
+<p>3，大量，重复。一天背200，比四天背50效率要高很多。</p>
+<p>4，使用软件。很多人说有书就好了，但背书需要的毅力比用软件大多了。每人习惯不同，背单词的软件很多，可以都试试，找到最合适自己的。最好软件可以安排学习，复习任务，不用操心以前学的忘了没，该不该复习之类的事。</p>
+<p>现在，我已经不背单词了，而是用kindle看书，不认识的词查不查都没有关系，或者可以猜出来，或者当它是个生僻字，下次见到再说，这就是阅读法。但前提是，我已经有了两万的词汇量。</p>
+<p>最后，单词很重要，很多说词汇量不重要的人，往往都已经有一两万的词汇了。</p>
+<p>update：许多英语的学习方法都是学得已经很好的人，回过头来帮学习较弱的同学总结的，往往体会不到基础较弱的同学的难处。作为一个英语基础较差的人，我试过各种方法和捷径，但都不了了之。当我花了几个月把词汇量从 5k 提到 25k 时，我才知道原因，词汇量 5k 和 25k 是不同的世界，5k 的时候，我不会想要多看一眼不认识的词，因为太多词都不认识了，果汁里的成分，杂志里的八卦，不认识的词太多，就不会想看，也不会记到脑子里，25k 的时候，遇到不认识的词会想，居然有我不认识的，仔细瞧瞧，然后可能可以根据词根什么的猜出来，或者干脆查字典，然后就记住了。这个时候我才能体会到以前试过的那些学习方法的用处，但前提是，我已经有相当的词汇量了。</p>
+<p>这也是我写这个答案的原因，从一个英语较差的人的角度来说下如何学英语，想强调的就是，词汇量很重要，不可以忽略。很多同学是要应付考试，但我并没有说过太多的考试技巧，其实我有研究过一些考试技巧，但那些只能让你比自己的实力多考十几分，关键是能力本身，过多的关注技巧会让人忽视了学习的重点，把做试卷仅仅当成训练题感的途径。</p>
+<p>高考的时候，题目稍难，做到阅读理解发现时间不够，而且文章看不懂，很难形容当时的心情，我算了一下时间，不可能做完阅读理解了，后边还有作文，我就完全放弃阅读文章，只看题目，根据逻辑关系猜答案。结果正确率是80%，英语成绩比英语专业的要求还高3分。</p>
 
 
 </article>
